# VehicleToRSUminCost

inet/: .cproject  .project
minCostVanet1/: .cproject  .project
minCostVanet1/simulations/: .tkenvrc  ApplicationLayer.ned  Decider80211pLinkFailure.cc  Decider80211pLinkFailure.h  Decider80211pLinkFailureToPhy80211pInterface.h  LinkFailureMessage.msg  Nic80211p_LF.ned  PhyLayer80211pLinkFailure.cc  PhyLayer80211pLinkFailure.h  PhyLayer80211pLinkFailure.ned  README  RSUVehicleScenario.ned  RSU_LF.ned  config.xml  myNet.launchd.xml  myNet.net.xml  myNet.rou.xml  myNet.sumo.cfg  omnetpp.ini  package.ned  run
minCostVanet1/simulations/results/: General-0.sca  General-0.vci  debug-0.sca  debug-0.vci  debug-0.vec  nodebug-0.sca  nodebug-0.vci  nodebug-0.vec
minCostVanet1/src/: Makefile  minCostVanet1  package.ned
minCostVanet1/test/: minCostVanet1.test  minCostVanet1.test~  runtest.cmd  runtest2  runtest3
minCostVanet1/test/work/: .DeciderResult80211pLinkFailure.test.swp  (+2 more)
veins/: .cproject
veins/.csettings/: org.omnetpp.cdt.gnu.config.debug.1760361527_cdtBuildSystem  org.omnetpp.cdt.gnu.config.debug.1760361527_org.eclipse.cdt.core.settings  org.omnetpp.cdt.gnu.config.release.1021697354_cdtBuildSystem  org.omnetpp.cdt.gnu.config.release.1021697354_org.eclipse.cdt.core.settings
veins/src/modules/phy/testPhy/: Decider80211pTest.cc  Decider80211pTest.h  Makefile  Makefile.am  Makefile.in  VanetSimulation.cc  aclocal.m4  config.status  configure  configure.in
veins/src/modules/phy/testPhy/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
(+33 files in other folders)
